ADD_SUBDIRECTORY(active ${Hemsleya_bin_path}//active)
ADD_SUBDIRECTORY(concurrent ${Hemsleya_bin_path}//concurrent)
ADD_SUBDIRECTORY(exception ${Hemsleya_bin_path}//exception)
ADD_SUBDIRECTORY(timer ${Hemsleya_bin_path}//timer)
ADD_SUBDIRECTORY(tools ${Hemsleya_bin_path}//tools)
ADD_SUBDIRECTORY(context ${Hemsleya_bin_path}//context)
ADD_SUBDIRECTORY(connect ${Hemsleya_bin_path}//net//connect)
ADD_SUBDIRECTORY(async_net ${Hemsleya_bin_path}//net//async_net)
ADD_SUBDIRECTORY(fsm ${Hemsleya_bin_path}//fsm)