ADD_SUBDIRECTORY(container ${Hemsleya_bin_path}//concurrent//container)
ADD_SUBDIRECTORY(abstract_factory ${Hemsleya_bin_path}//concurrent//abstract_factory)
ADD_SUBDIRECTORY(scheduling ${Hemsleya_bin_path}//concurrent//scheduling)
ADD_SUBDIRECTORY(parallel ${Hemsleya_bin_path}//concurrent//parallel)